# xolir

./: .gitignore  Dockerfile  LICENSE.txt  README.md  build.sh  euler2.telir  run.sh
java/: pom.xml
java/src/test/java/com/apivolve/xolir/: XolirGeneratedCodeTest.java
proto/xolir/: debug.proto
python/: build_hook.py  generate.sh  pyproject.toml  setup.py  test_proto.py
python/xolir/: build_hook.py
rust/: Cargo.toml  build.rs  cargo-proto
rust/src/: lib.rs
schema/: debug.proto  tel.json  tel.proto
src/xolir/: builtin_function.proto
static/java/: pom.xml
static/python/: pyproject.toml
telir/: array.proto  builtin_function.proto  builtin_type.proto  builtins.proto  debug.proto  expression.proto  function.proto  program.proto  refs.proto  struct.proto  tel.proto  type.proto  type_array.proto  type_struct.proto  type_union.proto
tests/: GenerateEuler2Java.java  create_euler2_telir.py  create_euler2_xolir.py  euler2.telir  generate.py  test.sh
tests/generate_java/: pom.xml
tests/generate_java/src/main/java/telir_generate_java/: GenerateEuler2Java.java
tests/generate_java/src/main/java/xolir_generate_java/: GenerateEuler2Java.java
typescript/: generate-proto.js  package-lock.json  package.json  test.js  tsconfig.json
typescript/src/: index.ts
xolir/: builtin_type.proto  debug.proto  expression.proto  function.proto  program.proto  refs.proto  service.proto  type.proto  type_array.proto  type_struct.proto  type_union.proto
xolir.txt/: example.xotxt  pyproject.toml
xolir.txt/xolir.txt/: parse.py  test_parser.py
