[package]
name = "xolir"
version = "0.1.0"
edition = "2024"
readme = "../README.md"
license = "CC-BY-NC-ND-4.0"
description = "Rust protobuf classes for Tel IR api"
include = [
    "src/**/*",
    "build.rs",
    "proto/**/*.proto"
]

build = "build.rs"

[dependencies]
prost = "0.13.5"
tonic = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"
