
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xolir.txt"
version = "0.0.1"
authors = [
    { name="Mark Verleg", email="mverleg.noreply@gmail.com" },
]
description = "Text representation for XOLIR api"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mverleg/xolir"
Issues = "https://github.com/mverleg/xolir/issues"

